crates/oxc_css_parser/tests/error/comment/line.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: CSS rule is expected
  ┌─ line.css:1:1
  │
1 │ // comment
  │ ^


